Fix tweet navigation flicker

--- a/prez-tweet-ui/app/tweet/tweet.component.scss
+++ b/prez-tweet-ui/app/tweet/tweet.component.scss
@@ -22,5 +22,9 @@
 
   .tweet-container {
     height: 100%;
+
+    .twitter-tweet:not(:first-child) {
+      display: none !important;
+    }
   }
 }
